# vector-db-from-scratch

./: .env.example  DESIGN_DECISONS.md  PERSISTENCE_SUMMARY.md  README.md  demo_persistence.py  pyproject.toml
tests/: test_api.py  test_disk_persistence.py  test_entities.py  test_indexes.py  test_services.py  test_vector_store.py
vector_db/: __init__.py  api.py  config.py  disk_store.py  entities.py  exceptions.py  indexes.py  repositories.py  schemas.py  services.py  vector_store.py
